# dtrack-v4-h2-postgresql-migrator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yaml  compose.v4.yaml  compose.v5.yaml  compose.yaml  main.py  pyproject.toml  skills-lock.json
.github/instructions/: pytest.instructions.md  python.instructions.md
docs/superpowers/plans/: 2026-06-23-plan-integration.md
scripts/: fix-postgres.sql
scripts/init/: schema.sql
scripts/utils/: truncate.sql
spec/: 001-plan-init.md  plan-integration.md  plan.md
src/dtrack/: __init__.py  __main__.py  cli.py  config.py  conversion.py  logging.py  models.py  reporting.py
src/dtrack/h2/: __init__.py  introspection.py  jdbc.py
src/dtrack/migration/: __init__.py  planner.py  service.py
src/dtrack/postgres/: __init__.py  data_loader.py  engine.py  schema.py
tests/integration/: conftest.py  helpers.py  test_data_migration.py  test_migrate_command.py  test_schema_migration.py
tests/integration/fixtures/: db.mv.db  db.mv.db.mv.db  db.mv.db.trace.db  db.trace.db
tests/unit/: test_cli.py  test_conversion.py  test_data_loader.py  test_h2_jdbc.py  test_planner.py  test_schema_builder.py
