[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dtrack-v4-h2-postgresql-migrator"
version = "1.0.0"
description = "A tool to migrate Dependency-Track v4 H2 database to PostgreSQL."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "jaydebeapi>=1.2.3",
    "jpype1>=1.7.1",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.7",
]

[project.scripts]
dtrack = "dtrack.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "ci" },
]
lint = ["ruff"]
type = ["ty"]
test = ["pytest", "pytest-cov", "testcontainers[postgresql]"]
ci = ["pre-commit"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".env",
    ".vscode",
    "__pycache__",
    ".ruff_cache",
    ".devcontainer",
    "node_modules",
]
target-version = "py314"
line-length = 120
indent-width = 4

[tool.pytest.ini_options]
pythonpath = ["src"]
